tests/snapshots/integration__pgm001_finding_details.snap
---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM001
  severity: Critical
  message: "CREATE INDEX on existing table 'products' should use CONCURRENTLY to avoid holding a SHARE lock that blocks writes."
  file: repos/all-rules/migrations/V002__violations.sql
  start_line: 2
  end_line: 2
