tests/snapshots/integration__pgm002_finding_details.snap
---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM002
  severity: Critical
  message: "DROP INDEX 'idx_customers_email' on existing table 'customers' should use CONCURRENTLY to avoid holding an exclusive lock."
  file: repos/all-rules/migrations/V003__more_violations.sql
  start_line: 2
  end_line: 2
