tests/snapshots/integration__pgm003_finding_details.snap
---
source: tests/integration.rs
expression: findings
---
- rule_id: PGM003
  severity: Critical
  message: "CONCURRENTLY cannot run inside a transaction. Set runInTransaction=\"false\" (Liquibase) or disable transactions for this migration."
  file: repos/all-rules/migrations/V003__more_violations.sql
  start_line: 12
  end_line: 12
